--- a/LiteChatGUI/LiteChatGUI/LoginScreen.ui
+++ b/LiteChatGUI/LiteChatGUI/LoginScreen.ui
@@ -45,7 +45,7 @@
      <set>Qt::NoTextInteraction</set>
     </property>
    </widget>
-   <widget class="QTextEdit" name="usernameText">
+   <widget class="QTextEdit" name="usernameBox">
     <property name="geometry">
      <rect>
       <x>520</x>
@@ -61,7 +61,7 @@
      </font>
     </property>
     <property name="cursor" stdset="0">
-     <cursorShape>PointingHandCursor</cursorShape>
+     <cursorShape>IBeamCursor</cursorShape>
     </property>
    </widget>
    <widget class="QPushButton" name="loginButton">
@@ -210,25 +210,6 @@
     </property>
     <property name="flat">
      <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="passwordBox">
-    <property name="geometry">
-     <rect>
-      <x>520</x>
-      <y>405</y>
-      <width>241</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Lucida Sans</family>
-      <pointsize>12</pointsize>
-     </font>
-    </property>
-    <property name="cursor" stdset="0">
-     <cursorShape>PointingHandCursor</cursorShape>
     </property>
    </widget>
    <widget class="QLabel" name="loginError">
@@ -396,6 +377,19 @@
     </property>
     <property name="flat">
      <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="passwordBox">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>405</y>
+      <width>241</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
     </property>
    </widget>
   </widget>
