--- a/LiteChatGUI/LiteChatGUI/CreateAccount.ui
+++ b/LiteChatGUI/LiteChatGUI/CreateAccount.ui
@@ -370,6 +370,25 @@
      <enum>QLineEdit::Password</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="loginError">
+    <property name="geometry">
+     <rect>
+      <x>482</x>
+      <y>600</y>
+      <width>321</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;Username already taken. Please try again.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::NoTextInteraction</set>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources>
