--- a/LiteChatGUI/LiteChatGUI/LoginScreen.ui
+++ b/LiteChatGUI/LiteChatGUI/LoginScreen.ui
@@ -63,6 +63,12 @@
     <property name="cursor" stdset="0">
      <cursorShape>IBeamCursor</cursorShape>
     </property>
+    <property name="inputMethodHints">
+     <set>Qt::ImhNone</set>
+    </property>
+    <property name="lineWrapMode">
+     <enum>QTextEdit::NoWrap</enum>
+    </property>
    </widget>
    <widget class="QPushButton" name="loginButton">
     <property name="geometry">
