All screens connect to each other. Cleaned up code.

--- a/LiteChatGUI/LiteChatGUI/LoginScreen.ui
+++ b/LiteChatGUI/LiteChatGUI/LoginScreen.ui
@@ -228,7 +228,7 @@
      </rect>
     </property>
     <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
+     <cursorShape>ArrowCursor</cursorShape>
     </property>
     <property name="text">
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;Incorrect username or password. Please try again.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -395,7 +395,7 @@
      </rect>
     </property>
     <property name="echoMode">
-     <enum>QLineEdit::Password</enum>
+     <enum>QLineEdit::PasswordEchoOnEdit</enum>
     </property>
    </widget>
   </widget>
