--- a/LiteChatGUI/LiteChatGUI/ChatScreen.ui
+++ b/LiteChatGUI/LiteChatGUI/ChatScreen.ui
@@ -96,8 +96,8 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>140</y>
+      <x>20</x>
+      <y>100</y>
       <width>311</width>
       <height>531</height>
      </rect>
@@ -989,6 +989,29 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QTextEdit" name="RecvMsgBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>660</y>
+      <width>231</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RecvMsgSendButton">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>660</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>O</string>
+    </property>
    </widget>
   </widget>
  </widget>
